--- a/src/css/selection.scss
+++ b/src/css/selection.scss
@@ -38,6 +38,19 @@
       width: 12rem;
     }
 
+    a {
+      display: flex;
+      align-self: stretch;
+
+      padding: 0 var(--bttn-l) var(--bttn-l);
+    }
+
+    >a {
+      justify-content: center;
+
+      padding: var(--bttn-l);
+    }
+
     h3 {
       @extend .h3--small;
 
@@ -182,6 +195,14 @@
       margin-bottom: 0;
     }
   }
+
+  .text {
+    gap: var(--gap-xs);
+
+    p {
+      @extend .p--small;
+    }
+  }
 }
 
 .selection--partners {
@@ -247,10 +268,12 @@
 
     align-items: center;
     align-self: flex-end;
-
-    width: 18.3625rem;
     gap: var(--gap-s);
     flex: none;
+
+    width: 18.3625rem;
+
+    padding: var(--bttn-l);
 
     &::before {
       @extend .p--regular;
@@ -355,8 +378,6 @@
       @extend .flex-row-center;
 
       flex: none;
-      gap: var(--gap-s);
-      padding: calc(var(--pad-m) / 2) var(--pad-xs);
 
       width: calc(50% - (var(--gap) / 2));
       max-width: initial;
@@ -393,6 +414,29 @@
 
         }
       }
+
+      a {
+        padding: calc(var(--pad-m) / 2) var(--pad-xs);
+      }
+
+      >a {
+        padding-right: 0;
+      }
+
+      .text {
+        display: grid;
+        align-self: stretch;
+        justify-self: stretch;
+        align-items: stretch;
+        justify-content: flex-start;
+
+        a {
+          display: flex;
+          align-items: center;
+
+          padding-left: var(--gap-s);
+        }
+      }
     }
 
     a {
@@ -420,6 +464,8 @@
   @extend .flex-row-start;
 
   h3 {
+    @extend .h3--small;
+
     color: var(--blue-dark);
   }
 
@@ -430,26 +476,10 @@
     gap: var(--gap-l);
   }
 
-  li {
-    gap: 0;
-
-    a {
-      display: flex;
-      align-self: stretch;
-
-      padding: 0 var(--bttn-l) var(--bttn-l);
-    }
-
-    >a {
-      justify-content: center;
-
-      padding: var(--bttn-l);
-    }
-  }
-
   .text {
     justify-content: stretch;
     align-items: stretch;
+    gap: var(--gap-xs);
 
     h3 a {
       padding-bottom: var(--gap-xs);
