--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -265,7 +265,7 @@ h5 {
   &--small,
   &.small {
     font-size: 1rem;
-    line-height: 140%;
+    line-height: 150%;
     letter-spacing: 0.02rem;
 
     @media screen and (max-width: variables.$screen-small-l) {
